@@ -1,4 +1,4 @@
-$Id: ChangeLog,v 1.49 2007-08-23 03:50:18 cmatsuoka Exp $
+$Id: ChangeLog,v 1.50 2007-08-24 13:50:41 cmatsuoka Exp $
 
 Stable versions
 ---------------
@@ -35,6 +35,7 @@ Stable versions
 	- fixed XM BPM setting (speedup.xm plays correctly)
 	- fixed LIQ effects and 16-bit sample loading
 	- fixed S3M pan settings
+	- fixed IT old instrument volume mode setting
 	- fixed issues with OpenBSD
 	- fixed issues with 64-bit machines
 	- fixed loading of big-endian 16-bit samples
